# Studienarbeit

./: .gitignore  README.md  draw.py
auto_interface_test/: Cargo.toml
auto_interface_test/draw/: draw.py
auto_interface_test/draw/diff_lag/: original
auto_interface_test/draw/diff_type/: original
auto_interface_test/files/: output.json
auto_interface_test/generator/: Dockerfile
auto_interface_test/generator/file_sys/: Cargo.toml
auto_interface_test/generator/operation/: run_encrypted.sh  run_program.sh  session.yml
auto_interface_test/sample_files/diff_language/: Amharic  Arabic  Hebrew  Russian  chinese  greek  sanskrit  thai
auto_interface_test/sample_files/diff_len/: 1557  610
auto_interface_test/sample_files/diff_type/: AVI.avi  RMVB.rmvb
auto_interface_test/source_files/: Dockerfile_test  Dockerfile_test_en  Dockerfile_test_ori  Dockerfile_th  install_ent.sh  test_trace.bt  tmp_trace.bt  trace_source.bt  trace_test.bt
auto_interface_test/source_files/LAS/: docker-compose.yml
auto_interface_test/source_files/test/: Dockerfile
auto_interface_test/source_files/th/: Dockerfile
auto_interface_test/src/: executor.rs  interceptor.rs  main.rs  monitor.rs  threshold.rs  tracer.rs
auto_interface_test/src/engine/: application.rs  (+5 more)
test_code/: .gitignore  Cargo.toml
test_code/data-original/: world.py
test_code/docker/: Dockerfile  execution.sh
test_code/files/: encrypt.txt  output_1.json
test_code/generator/: Cargo.toml
test_code/source_files/: install_ent.sh  trace_source.bt
test_code/src/: executor.rs  main.rs  monitor.rs  tracer.rs
(+235 files in other folders)
