[package]
name = "auto_interface_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
serde = {version="1.0.160", features = ["derive"]}
serde_json = "1.0.91"
structopt = "0.3.26"
sudo = "0.6.0"
plotters = "0.3.4"