[package]
name = "test_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-syzlang = { path = "../rust-syzlang" }

serde = "1.0.152"
serde_json = "1.0.91"

libc = "0.2.126"

arbitrary = { version = "=0.4.7", features = ["derive"] }
bitflags = "1.3.2"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"

rand = "0.8.5"
rand_core = "0.6.3"
rand_chacha = "0.3.1"

pete = "0.9.0"
lazy_static = "1.4.0"

nix = "0.26.1"

sudo = "0.6.0"